--- a/php-redis/index.html
+++ b/php-redis/index.html
@@ -9,6 +9,7 @@
   <body ng-controller="RedisCtrl">
     <div style="width: 50%; margin-left: 20px">
       <h2>Guestbook</h2>
+      <h2>Line Two Added</h2>
     <form>
     <fieldset>
     <input ng-model="msg" placeholder="Messages" class="form-control" type="text" name="input"><br>
